.internal/Day-3/Istio/installation-routing/ns.yml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-injection: enabled
    kubernetes.io/metadata.name: mesh
  name: mesh
